# bioscat3d

./: .gitignore  A_andreas_sphere.csv  CMakeLists.txt  C_andreas_sphere.csv  Constants.h  E_field_unit_sphere.csv  FieldComparisons.py  GeneratedSphere.csv  HertzianDipoleV2.cpp  Hertzian_dipole.py  MeepComparison.cpp  PointsSphere.csv  check_csv_equal.cpp  computeAngles.h  dipoleTester.cpp  draft.cpp  eIncidentNew.h  fieldDipole.h  fieldIncidentNew.h  fieldTester.cpp  gpTester.cpp  hertzianDipole.cpp  hertzianDipole.py  hertzianDipoleField.cpp  hertzianDipoleField.h  linearSystem.cpp  linearSystem.h  main.cpp  makefile  matrix.csv  matrixToCSVfile.cpp  matrixToCSVfile.h  matrix_A.csv  moveDipole.cpp  moveDipole.py  moveDipoleField.h  pcnTester.cpp  realDataArray.cpp  realDataFull.cpp  realDataValidation.cpp  (+14 more)
AForwardSolver/: Constants.h  Dipole.cpp  Dipole.h  FieldCalculator.h  FieldCalculatorDipole.cpp  FieldCalculatorDipole.h  FieldCalculatorUPW.cpp  FieldCalculatorUPW.h  LinearSystemSolver.cpp  LinearSystemSolver.h  Makefile  Surface.h  SurfaceSphere.cpp  SurfaceSphere.h  Surfacemain.cpp  SystemAssembler.cpp  SystemAssembler.h  SystemSolver.cpp  SystemSolver.h  UtilsExport.h  UtilsFresnel.h  UtilsSolvers.h  UtilsTransform.h  main.cpp  scatterSim  solution_y_simple.csv  ~$ilsTransform.h  ~$nstants.h
AForwardSolver - Copy/: Constants.h  FieldCalculator.h  FieldCalculatorDipole.cpp  FieldCalculatorDipole.h  FieldCalculatorUPW.cpp  FieldCalculatorUPW.h  LinearSystemSolver.cpp  LinearSystemSolver.h  Makefile  SurfaceSphere.cpp  SurfaceSphere.h  SystemAssembler.cpp  SystemAssembler.h  UtilsFresnel.h  UtilsTransform.h  main.cpp  matrix_A_simple.csv  scatterSim  solution_y_simple.csv  vector_b_simple.csv
CSV/: E_tangential_error1_0.csv  E_tangential_error1_One_014.csv  E_tangential_error1_Ten_014.csv  E_tangential_error1_Zero_0014.csv  E_tangential_error1_Zero_014.csv  E_tangential_error2_0.csv  E_tangential_error2_One_014.csv  E_tangential_error2_Ten_014.csv  E_tangential_error2_Zero_0014.csv  E_tangential_error2_Zero_014.csv  H_tangential_error1_0.csv  H_tangential_error1_One_014.csv  H_tangential_error1_Ten_014.csv  H_tangential_error1_Zero_0014.csv  H_tangential_error1_Zero_014.csv  H_tangential_error2_0.csv  H_tangential_error2_One_014.csv  H_tangential_error2_Ten_014.csv  H_tangential_error2_Zero_0014.csv  H_tangential_error2_Zero_014.csv  SurfaceFixedUnits30FromPseudoReal05.csv  SurfaceFixedUnits30FromPseudoReal05_X.csv  SurfaceFixedUnits30FromPseudoReal05_Y.csv  SurfaceFixedUnits30FromPseudoReal05_Z.csv  surface_data_inneraux_PN.csv  surface_data_outeraux_PN.csv  tangential_error1.csv  tangential_error1_0.csv  tangential_error1_One.csv  tangential_error1_Ten.csv  tangential_error1_Ten_014.csv  tangential_error1_Zero.csv  tangential_error1_Zero_014.csv  tangential_error2.csv  tangential_error2_0.csv  tangential_error2_One.csv  tangential_error2_Ten.csv  tangential_error2_Ten_014.csv  tangential_error2_Zero.csv  tangential_error2_Zero_014.csv
Comparison_test/: A_random.csv  Check_difference_using_csv.py  PN_dipole_solver.cpp  PN_random.csv  dipole_params_random.csv  dipole_testpoints_random.csv  output.csv
ForwardSolver/: Constants.h  CrankNicolson.cpp  CrankNicolson.h  FieldCalculator.h  FieldCalculatorDipole.cpp  FieldCalculatorDipole.h  FieldCalculatorTotal.cpp  FieldCalculatorTotal.h  FieldCalculatorUPW.cpp  FieldCalculatorUPW.h  GaussianProcessModel.cpp  GaussianProcessModel.h  GaussianProcessSampler.cpp  GaussianProcessSampler.h  MASSystem.cpp  MASSystem.h  Makefile  MeepDipole.py  SurfaceBumps.cpp  SurfaceBumps.h  SurfaceFRomGP.cpp  SurfaceFRomGP.h  SurfacePlane.cpp  SurfacePlane.h  SurfaceSphere.h  SystemAssembler.cpp  SystemAssembler.h  UtilsExport.h  UtilsFresnel.h  UtilsGP.h  UtilsSampling.h  UtilsTransform.h  main.cpp  matrix_A_simple.csv  scatterSim  solution_y_simple.csv  testDipole.py  vector_b_simple.csv
Meep/: simNormalFlux.ipynb  simNormalFluxNewGeom.ipynb  simNormalFluxNewGeomWithFreq.ipynb
MeepComparisons/: FieldTest.cpp  Makefile
MeepTests/: 2d_UPW_oblique.py  3dMagnitudeAngleCylinder.ipynb  3dMagnitudeAngleSingleBump.ipynb  3dMagnitudeAngleSingleMultiRamdomBumps.ipynb  3dMagnitudeAngleSphere.ipynb  3dNoAngles.ipynb  3dNoAnglesMAgnitude.ipynb  3dSimulation_XYPlane.ipynb  3dSimulation_from_surface.py  3dSimulation_from_surface_air.py  3dSimulation_from_surface_polarised.py  3dSimulation_multipleRandomBumps.ipynb  3dSurfaceAndSources.ipynb  3dSurfaceAndSources.py  3dUPW_oblique.py  3dUPW_oblique_fromTime.py  3dUPW_oblique_fromTime_Eigen.py  3dsimUPW.py  DipoleMeepNearAndFarField.ipynb  DipoleMeepVAriableDirection.ipynb  Mie_theory.py  SingleDipoleMeep.ipynb  UPW2D.py  UPW2DTimeDomain.py  UPW3D.py  aux_points.csv  dataDump.csv  dipole_farfields_off_axis.npz  dipole_in_vacuum_cyl_off_axis.py  dipole_in_vacuum_cyl_off_axis_Hertzian.py  environment.yml  oblique-planewave (2).ipynb  oblique-planewave-2D-X-Y-pml.ipynb  oblique-planewave-2D.Y-pml.ipynb  oblique-planewave-3D.ipynb  point2D.py  tester.py
Plots/: E_field_unit_spherePlot.py  linearSystemHeatmap.py  linearSystemZeroPlots.py  plotPowerTendency.py  spherePlot.py
Python/src/: CMakeLists.txt  Spline.py  SplineAlt.py  SplineOriginal.py  splinetest.cpp  tmp_splinerunner.py
data_linearSystem/: GeneratedSphere.csv  matrix_A.csv  matrix_A_simple.csv  solution_y.csv  solution_y_simple.csv  vector_b.csv  vector_b_simple.csv
json/: surfaceParameters.py  surfaceParametersOne.py  surfaceParametersPseudoReal.py  surfaceParametersTen.py  surfaceParamsHalf.json  surfaceParamsHundred.json  surfaceParamsMeep.json  surfaceParamsNormalNewGeom.json  surfaceParamsOne.json  surfaceParamsPseudoReal.json  surfaceParamsPseudoReal05.json  surfaceParamsTen.json  surfaceParamsTenDim05.json  surfaceParamsZero.json  surfaceParamsZero07.json  surfaceTester.py
oldPython/: hertzianDipole.py  moveDipole.py  reflectionUPW.py
unitTesting/: CMakeLists.txt  Makefile  test_utils.cpp
ztemp/cpp_pybind_project/: CMakeLists.txt  my_script.py
ztemp/cpp_pybind_project/src/: main.cpp  memoryShare.cpp  modEigen.cpp
(+6310 files in other folders)
